Added missing property to SwitchType
